--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,13 @@
     "react": "^16.9.0",
     "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-router-redirect": "^1.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "reactstrap": "^8.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "set PORT=3003 && react-scripts start",
