--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.19.1",
@@ -15,6 +16,7 @@
     "react-router-redirect": "^1.0.1",
     "react-scripts": "3.1.1",
     "reactstrap": "^8.0.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
@@ -38,6 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:5001/"
+  }
 }
