--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "path": "^0.12.7",
     "sequelize": "^5.18.0"
   }
 }
